--- a/Edge Side/telegraf.conf
+++ b/Edge Side/telegraf.conf
@@ -112,11 +112,11 @@
   ## urls will be written to each interval.
   # urls = ["unix:///var/run/influxdb.sock"]
   # urls = ["udp://127.0.0.1:8089"]
-   urls = ["http://132.207.170.25:8086"]
+   urls = ["${INFLUXDB_IP}:${INFLUXDB_PORT}"]
 
   ## The target database for metrics; will be created as needed.
   ## For UDP url endpoint database needs to be configured on server side.
-   database = "sensors"
+   database = "${TARGET_DATABASE_NAME}"
 
   ## The value of this tag will be used to determine the database.  If this
   ## tag is not set the 'database' option is used as the default.
@@ -149,8 +149,8 @@
   # timeout = "5s"
 
   ## HTTP Basic Auth
-   username = "telegraf"
-   password = "telegraf"
+   username = ${TARGET_DATABASE_USERNAME}
+   password = ${TARGET_DATABASE_PASSWORD}
 
   ## HTTP User-Agent
   # user_agent = "telegraf"
@@ -7780,11 +7780,11 @@
 #   ##   example: servers = ["tcp://localhost:1883"]
 #   ##            servers = ["ssl://localhost:1883"]
 #   ##            servers = ["ws://localhost:1883"]
-   servers = ["tcp://132.207.170.59:1883"]
+   servers = ["${MQTT_SERVER_IP}:${MQTT_SERVER_PORT}"]
 #
 #   ## Topics that will be subscribed to.
    topics = [
-        "sensors"
+        ${MQTT_TOPIC}
    ]
 #
 #   ## The message topic will be stored in a tag specified by this value.  If set
